[metadata]
name = pyfindmaxima
version = 0.1.2
description = Find peaks in images like ImageJ FindMaxima
url = https://github.com/cwood1967/pyfindmaxima
author = Chris Wood
author_email = cjw@stowers.org
license = Apache
classifiers =
  Programming Language :: Python :: 3
  Licence :: OSI Approved :: Apache License
  Operating System :: OS Independent

[options]
packages == find:
package_requires = >=3.9
include_package_data = True
